create signIn screen

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -80,7 +80,7 @@ flutter:
   fonts:
      - family: Cairo
        fonts:
-         - asset: assets/fonts/Cairo-VariableFont.ttf
+         - asset: assets/fonts/Cairo.ttf
   #       - asset: fonts/Schyler-Italic.ttf
   #         style: italic
   #   - family: Trajan Pro
