--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,9 @@ dependencies:
   awesome_icons: ^1.1.0
   smooth_page_indicator: ^1.2.1
   flutter_bloc: ^9.1.0
+  intl_phone_field: ^3.2.0
+  pinput: ^5.0.1
+  dotted_border: ^2.1.0
 
 dev_dependencies:
   flutter_test:
