--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,10 @@ dependencies:
   intl_phone_field: ^3.2.0
   pinput: ^5.0.1
   dotted_border: ^2.1.0
+  flutter_lazy_indexed_stack: ^0.0.6
+  convex_bottom_bar: ^3.2.0
+  font_awesome_flutter: ^10.8.0
+  carousel_slider: ^5.0.0
 
 dev_dependencies:
   flutter_test:
