--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,8 +47,10 @@ dependencies:
   convex_bottom_bar: ^3.2.0
   font_awesome_flutter: ^10.8.0
   carousel_slider: ^5.0.0
+  flutter_screenutil: ^5.9.3
 
 dev_dependencies:
+  flutter_lints: ^3.0.0
   flutter_test:
     sdk: flutter
 
