--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   font_awesome_flutter: ^10.8.0
   carousel_slider: ^5.0.0
   flutter_screenutil: ^5.9.3
+  timeline_tile: ^2.0.0
 
 dev_dependencies:
   flutter_lints: ^3.0.0
