--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,11 @@ dependencies:
   carousel_slider: ^5.0.0
   flutter_screenutil: ^5.9.3
   timeline_tile: ^2.0.0
+  firebase_messaging: ^15.2.5
+  firebase_core: ^3.13.0
+  permission_handler: ^12.0.0+1
+  onesignal_flutter: ^5.3.0
+  flutter_local_notifications: ^19.1.0
 
 dev_dependencies:
   flutter_lints: ^3.0.0
